--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
         <title>
             Git Test App
         </title>
+        <script>
+            function testing(){
+                console.log("worked");
+            }
+        </script>
     </head>
     <body>
+        
         This is my testing git app!
         Login Form
     </body>
